-Added small code in ParkShowContainer to display review quantity -Fixed title and rating alignments, piture size and margins in review section

--- a/app/assets/stylesheets/indexImages.scss
+++ b/app/assets/stylesheets/indexImages.scss
@@ -228,6 +228,7 @@ h2 {
 
 .reviewTileStyling {
   padding:40px;
+  margin-top: -2rem
 }
 
 .reviewForm {
@@ -243,22 +244,24 @@ h2 {
 }
 
 .reviewHeading img {
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 100px;
   display: inline-block;
   float:left;
+  margin-right: 1rem;
 }
 
 .rating {
   text-align: right;
-  padding:10px 20px 10px 0;
-
+  padding: 10px 20px 10px 0;
+  display: inline;
+  float: right;
 }
 
 .author {
-text-align:center;
-  padding:10px 20px 10px 0;
+text-align: right;
+  padding: 10px 20px 10px 0;
 }
 
 .reviewHeading {
